[package]
name = "iced_dynamic_internal"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2018"
description = "Dynamic linking for iced"
license = "MIT"
repository = "https://github.com/hecrj/iced"
documentation = "https://docs.rs/iced_dynamic"
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
categories = ["gui"]

[lib]
crate-type = ["dylib"]

[dependencies]
iced = { version = "0.3", default-features = false, path = "../.." }
